@@ -50,6 +50,7 @@
 #include "util/data/dname.h"
 #include "util/net_help.h"
 #include "util/module.h"
+#include "util/region-allocator.h"
 
 enum val_classification 
 val_classify_response(uint16_t query_flags, struct query_info* qinf, 
@@ -298,6 +299,7 @@ val_verify_rrset(struct module_env* env, struct val_env* ve,
 		ntohs(rrset->rk.type), ntohs(rrset->rk.rrset_class));
 	sec = dnskeyset_verify_rrset(env, ve, rrset, keys);
 	verbose(VERB_ALGO, "verify result: %s", sec_status_to_string(sec));
+	region_free_all(env->scratch);
 
 	/* update rrset security status 
 	 * only improves security status 
